# 2023_07_test_tasks

./: .gitignore  README.md  foobar.txt  pyproject.toml  task_2.db
app/: task_1.py  task_2.py  task_3.py  task_4.py
